# calvyn-mcpe-bot

./: .gitignore  Cargo.toml  README.md  config.json
src/: lib.rs  log.rs  main.rs  proto.rs  rak.rs
src/client/: mod.rs  packets.rs  terminal.rs
